tweaked file, implemented css variables Removed html, body element properties and color prop not using css variable. Still has scrollbars bug during animation.

--- a/src/screenpartystyle.css
+++ b/src/screenpartystyle.css
@@ -1,8 +1,3 @@
-html, body {
-  height: 100%;
-  width: 100%;
-  /* background: black; */
-}
 img {
   opacity: 0;
   width: 30px;
@@ -120,15 +115,11 @@ img {
 
 .bingo {
   font-size: 0;
+  color: var(--rgba-secondary-2-4);
   opacity: 0;
-  transform: rotate(0deg);
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
   overflow: hidden;
-  animation-name: sloGrow;
-  animation-duration: 4s;
-  animation-iteration-count: 2;
-  color: brown;
   min-width:fit-content;
   height: min-content;
   position: absolute;
@@ -138,6 +129,10 @@ img {
   left: 0;
   text-align: center;
   margin: auto;
+  transform: rotate(0deg);
+  animation-name: sloGrow;
+  animation-duration: 4s;
+  animation-iteration-count: 2;
 }
 @keyframes sloGrow {
   0% {
